Fix interactive lucky foot styling on mobile

--- a/src/name/name.css
+++ b/src/name/name.css
@@ -6,6 +6,7 @@
 .luckyFootEntry {
     margin-left: 0px;
     margin-right: 0px;
+    display: inline-block;
     cursor: pointer;
 }
 
